--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,15 @@ header>nav {
     flex-wrap: wrap;
 }
 
+nav .logo span {
+    font-family: 'Inter', sans-serif;
+    display: block;
+    font-style: italic;
+    color: #00669e;
+    font-size: 13px;
+    font-weight: 600;
+}
+
 header>nav .hide_menu {
     display: none;
 }
@@ -105,13 +114,86 @@ header>nav ul>li>a::before {
     color: var(--active-link-color);
 }
 
-header>nav ul>li>a:hover:before {
+header>nav .nav_main_menu>li>a:hover:before {
     width: 100%;
 }
 
 header>nav ul>li>a:hover {
     color: var(--active-link-color);
-    ;
+    position: relative;
+}
+
+header>nav ul>.sub-menu {
+    position: relative;
+    padding-bottom: 17px;
+}
+
+header>nav ul>.sub-menu ul {
+    font-family: 'Inter', sans-serif;
+    flex-direction: column;
+    position: absolute;
+    width: 300px;
+    background: #ffff;
+    padding: 20px 0px;
+    gap: 10px;
+    border-radius: 10px;
+    margin-top: 19px;
+    display: none;
+    transition: 300ms ease-in-out !important;
+}
+
+header>nav ul>.sub-menu .pro-menu {
+    background-color: #8cbbd1 !important;
+}
+
+header>nav ul>.sub-menu ul::before {
+    content: "";
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    position: absolute;
+    top: -7px;
+    left: 23px;
+    transform: rotate(51deg);
+}
+
+header>nav ul>.sub-menu .pro-menu::before {
+    background-color: #8cbbd1 !important;
+}
+
+.sub-menu:hover.sub-menu ul {
+    display: flex;
+}
+
+header>nav ul>.sub-menu ul li a {
+    display: block;
+    line-height: 2;
+    position: relative;
+    padding-left: 20px;
+}
+
+header>nav ul>.sub-menu .pro-menu li a {
+    color: #ffff;
+}
+
+header>nav ul>.sub-menu ul li a::before {
+    content: '';
+    width: 5px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0%, -50%);
+    opacity: 0;
+    transition: 300ms linear;
+}
+
+header>nav ul>.sub-menu .pro-menu li a::before {
+    background-color: #ffff;
+}
+
+header>nav ul>.sub-menu ul li a:hover:before {
+    opacity: 1;
 }
 
 .d-none {
@@ -207,7 +289,7 @@ header>nav>.toggle>span {
 #work {
     width: 100%;
     min-height: 420px;
-    margin: 70px auto;
+    margin: 0px auto;
 }
 
 .inner_section_title {
@@ -286,7 +368,7 @@ header>nav>.toggle>span {
 
 .inner_work_row {
     width: 90%;
-    margin: 150px auto 0px;
+    margin: 65px auto 0px;
     height: auto;
     display: flex;
     justify-content: space-between;
@@ -339,7 +421,7 @@ header>nav>.toggle>span {
 #product {
     width: 100%;
     height: auto;
-    margin: 90px auto;
+    margin: 0px auto;
 }
 
 #product>.product_title {
@@ -423,6 +505,71 @@ header>nav>.toggle>span {
 
 /* product section start  */
 
+#about {
+    width: 100%;
+    height: auto;
+    margin: 0px auto 50px;
+    /* background: #F1F1F1; */
+    background-image: url("../images/bg-ab.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 30px 0px;
+}
+
+#about .about-row {
+    display: grid;
+    grid-template-columns: 40% 55%;
+    justify-content: space-between;
+    margin: 30px auto 40px;
+}
+
+#about .ab-row-2 {
+    display: grid;
+    grid-template-columns: 55% 40% !important;
+}
+
+#about .about-row .about-col-1 {
+    background-image: url(../images/Rectangle113.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+}
+
+#about .about-col-2 {
+    background-image: url(../images/Rectangle114.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+}
+
+#about .about-row .about-col-3 {
+    background-image: url(../images/Rectangle115.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+#about .about-row .about-col img {
+    display: none;
+}
+
+#about .about-row .about-col {
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#about .about-row .about-col p {
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.8;
+    font-size: 16px;
+    font-weight: 500;
+    width: 99%;
+    text-align: justify;
+    word-spacing: 1px;
+    color: var(--text-color);
+}
+
 /* rating section start  */
 #price {
     width: 100%;
@@ -463,130 +610,77 @@ header>nav>.toggle>span {
 }
 
 /* rating section end  */
-.add {
-    color: red !important;
-}
-/* blog section start  */
-#blog {
+
+#contact {
     width: 100%;
     height: auto;
-    margin: 65px auto 64px;
-    transition: all 0.6s;
-}
-
-.blog-row {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    justify-content: space-evenly;
-    margin: 40px 0px 40px;
-}
-
-.blog-row>.blog-col {
-    background-color: #FBF9F9;
-    box-shadow: 0px 0px 8px 0px #c7c7c7;
-    border-radius: 22px 22px 0px 0px;
-    overflow: hidden;
-}
-
-.blog-col > .blog-image {
-    width: 100%;
-    overflow: hidden;
-}
-
-.blog-col img {
-    width: 100%;
-    transition: 300ms ease-in-out;
-}
-
-
-.blog-col:hover img {
-    transform: scale(1.2);
-}
-
-.blog-col h3 {
-    font-family: 'Poppins', sans-serif;
-    color: var(--title-color);
-    width: 90%;
     margin: 0px auto;
-    text-align: center;
-    margin: 14px 0px 12px;
-    text-transform: capitalize;
-    font-size: 19px;
 }
 
-.blog-col p {
-    font-family: 'Poppins', sans-serif;
-    color: var(--text-color);
-    width: 87%;
-    font-size: 15px;
-    text-align: center;
-    margin: 0px auto 20px;
+#contact form {
+    width: 80%;
+    min-height: 400px;
+    background-image: url('../images/bg_image.png');
+    padding: 30px 20px;
+    background-repeat: no-repeat;
+    margin: 20px auto 50px;
+    border-radius: 15px;
 }
 
-/* blog section start  */
+#contact form .contact_row {
+    width: 90%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+    margin: 30px auto;
 
-/* address section start  */
-#start {
+}
+
+#contact form .contact_row .contect-col input {
     width: 100%;
-    height: auto;
-    padding: 40px 0px;
-    background-color: #DDF2FF;
-}
-
-#start p {
-    text-align: center;
+    height: 40px;
     font-family: 'Poppins', sans-serif;
-    margin: 20px auto 0px;
-    width: 400px;
-    font-size: 15px;
-    color: var(--text-color);
-}
-
-#start .message-box {
-    width: 300px;
-    height: 39px;
-    margin: 20px auto 0px;
-    position: relative;
-    background-color: red;
-    border-radius: 8px;
-    overflow: hidden;
-}
-
-#start .message-box input {
-    font-family: 'Poppins', sans-serif;
-    height: 100%;
-    width: 100%;
-    background-color: #2587B5;
-    border: none;
-    padding: 0px 10px;
-    color: #ffff;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #f1f1f1;
     outline: none;
 }
 
-#start .message-box input::placeholder {
+#contact form textarea {
+    padding: 10px;
+    width: 90%;
+    margin: 0px auto;
+    display: block;
     font-family: 'Poppins', sans-serif;
-    color: #fff;
+    border-radius: 5px;
+    border: 1px solid #f1f1f1;
+    outline: none;
 }
 
-#start .message-box button {
-    position: absolute;
-    right: 0px;
-    height: 100%;
-    padding: 0px 24px;
-    border: none;
-    color: #2587B5;
-    font-weight: 600;
+#contact form .btn-box {
+    text-align: center;
+}
+
+#contact form .btn-box button {
+    text-align: center;
+    margin-top: 34px;
+    padding: 10px 30px;
+    border-radius: 7px;
     font-size: 16px;
-    transition: 400ms ease-in-out;
-}
-
-#start .message-box button:hover {
-    background-color: #0c5273;
+    letter-spacing: 1px;
+    font-family: 'Poppins', sans-serif;
+    background-color: #2587b5;
+    border: 1px solid #2587b5;
     color: #ffff;
+    font-weight: 600;
+    /* border: none; */
 }
 
-/* address section start  */
-
+#contact form .btn-box button:hover {
+    background-color: transparent;
+    border: 1px solid #2587b5;
+    color: #006299;
+}
 
 footer {
     width: 100%;
@@ -603,6 +697,15 @@ footer .f-logo {
 
 footer .f-logo img {
     width: 75px;
+}
+
+footer .f-logo span {
+    display: block;
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
+    font-weight: 600;
+    font-size: 13px;
+    color: #006299;
 }
 
 footer .f-item {
@@ -666,7 +769,7 @@ footer .f-item .f-col .social_link ul li a {
     transition: 200ms ease-in-out;
 }
 
-footer .f-item .f-col .social_link ul li:hover a{
+footer .f-item .f-col .social_link ul li:hover a {
     color: #ffff;
 }
 
@@ -703,12 +806,8 @@ footer .f-item .f-col .links li a::after {
 }
 
 footer .f-item .f-col ul li a:hover::after {
-  opacity: 1;
+    opacity: 1;
 }
-
-/* footer .f-item .f-col .f-nav-link ul li a:hover {
-    color: #0c5273 !important;
-} */
 
 .addres-link {
     display: flex;
@@ -729,99 +828,181 @@ footer .copy-right {
 }
 
 
-/* about page  */
-/* about page  */
-/* about page  */
+/* ===========> products details ==============>   */
+/* ===========> products details ==============>   */
 
-#about .container-fluide {
-    /* min-height: 100vh; */
-}
-
-.about-benar {
-    width: 47%;
-    text-align: justify;
-    margin: 30px 0px 0px;
-}
-
-.about-benar h1 {
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 10px;
-}
-
-.about-benar p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: var(--text-color);
-    margin-bottom: 15px;
-}
-
-.product-page {
+#products {
     width: 100%;
     height: auto;
     margin: 0px auto;
-    background-color: #a3d2e7;
 }
 
-.product-page header {
-}
-
-/* medicine page  */
-
-.min-con {
-    max-width: 1141px;
-    height: auto;
-    margin: 0px auto;
-}
-
-.min-con h2 {
-    font-family: 'Poppins', sans-serif;
-    color: #353b3f;
-    margin: 40px 0px 20px;
-}
-
-.min-con .medicine_row  {
+#products .prod_row {
     width: 100%;
-    display: grid;
-    grid-template-columns: 25% 35% 35%;
-    column-gap: 15px;
-    flex-grow: wrap;
-    border-bottom: 1px solid #cdcdcd;
-    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-top: 63px;
+    padding-bottom: 36px;
+    padding-bottom: 65px;
+    border-bottom: 1px solid #dfdcdc9e;
 }
 
-.medicine_col {
-    font-family: 'Poppins', sans-serif;
+#products .prod_row .pro_col {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.min-con .medicine_row .medicine_col h4 {
-    color: #0986c0;
-    font-size: 21px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
+#products .prod_row .mid {
+    border-right: 1px solid #dfdcdc9e;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    margin-right: 27px;
 }
 
-.min-con .medicine_row .medicine_col .f-name p {
-    font-weight: 600;
-    margin-bottom: 55px;
-    color: #1a2527;
-}
-
-.min-con .medicine_row .medicine_col .compo p {
-    font-size: 14px;
-    margin-bottom: 20px;
-    color: #272727;
-    letter-spacing: 0.2px;
-}
-
-.min-con .medicine_row .medicine_col .compo p span {
-    font-weight: 600;
-}
-
-.min-con .medicine_row .medicine_col{
+#products .prod_row .pro_col .tab_image {
+    /* padding: 30px; */
+    width: 95%;
     overflow: hidden;
 }
 
-.min-con .medicine_row .medicine_col img:hover {
-    transform: scale(1.3);
+#products .prod_row .pro_col img {
+    width: 100%;
+    transition: 300ms ease-in-out;
 }
 
+#products .prod_row .pro_col img:hover {
+    transform: scale(1.2);
+}
+
+#products .prod_row .pro_col h3 {
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    text-align: center;
+    color: var(--btn-bg-color);
+    font-size: 28px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+#products .prod_row .pro_col h5 {
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin-bottom: 11px;
+    text-transform: capitalize;
+}
+
+#products .prod_row .pro_col p {
+    font-family: 'Poppins', sans-serif;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    line-height: 2;
+    font-size: 16px;
+}
+
+#products .prod_row .pro_col button {
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    color: var(--active-link-color);
+    margin-top: 10px;
+    font-weight: 600;
+    text-align: start;
+    cursor: pointer;
+    width: fit-content;
+}
+
+
+/* -------> product modal <------------ */
+.modal {
+    width: 100%;
+    min-height: 100vh;
+    position: fixed;
+    top: -110%;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #8787875c;
+    transition: 300ms ease-in-out;
+    backdrop-filter: blur(3px);
+    z-index: 9999;
+}
+
+.modal_con {
+    width: 80%;
+    margin: 0px auto;
+}
+
+.modal_row {
+    min-height: auto;
+    width: 80%;
+    margin: 0px auto;
+    border-radius: 10px;
+    background-color: #ffff;
+    padding: 61px 27px 37px;
+    display: flex;
+    gap: 24px;
+    position: relative;
+}
+
+.modal_row .close {
+    position: absolute;
+    right: 31px;
+    top: 16px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+.modal_row .close i {
+    color: #FF5722;
+    font-weight: 700;
+    padding-left: 2px;
+}
+
+.modal_col_left {
+    padding-left: 30px;
+    border-left: 1px solid #b9b9b9;
+}
+
+.modal_row .modal_col img {
+    margin-bottom: 20px;
+    margin-bottom: 0;
+    padding-bottom: 29px;
+    border-bottom: 1px solid #b9b9b9;
+}
+
+.modal_row .modal_col h2 {
+    font-family: 'Poppins', sans-serif;
+    text-transform: capitalize;
+    margin-bottom: 23px;
+    font-weight: 500;
+}
+
+.modal_row .modal_col h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 26px;
+    font-weight: 500;
+    color: var(--active-link-color);
+    text-align: center;
+    margin-top: 13px;
+}
+
+.modal_row .modal_col p {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.modal_row .modal_col p i {
+    font-size: 24px;
+    color: #FF5722;
+    padding-right: 5px;
+}
