--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ header>nav {
     flex-wrap: wrap;
 }
 
+nav .logo {
+    text-align: center;
+}
+
 nav .logo span {
     font-family: 'Inter', sans-serif;
     display: block;
@@ -76,6 +80,7 @@ nav .logo span {
     color: #00669e;
     font-size: 13px;
     font-weight: 600;
+    /* width: 130px; */
 }
 
 header>nav .hide_menu {
@@ -125,7 +130,7 @@ header>nav ul>li>a:hover {
 
 header>nav ul>.sub-menu {
     position: relative;
-    padding-bottom: 17px;
+    padding-bottom: 19px;
 }
 
 header>nav ul>.sub-menu ul {
@@ -706,6 +711,9 @@ footer .f-logo span {
     font-weight: 600;
     font-size: 13px;
     color: #006299;
+    font-size: 12px;
+    color: #006299;
+    line-height: 1.2;
 }
 
 footer .f-item {
@@ -778,15 +786,19 @@ footer .f-item .f-col ul {
     margin-top: 13px;
 }
 
+footer .f-item .f-col ul li {
+    margin-bottom: 15px;
+}
+
 footer .f-item .f-col ul li a {
     color: #fff;
-    /* display: block; */
+    display: block;
     text-decoration: none;
     font-size: 15px;
-    line-height: 2.5;
     font-family: 'Poppins', sans-serif;
     border: none;
     position: relative;
+    width: fit-content;
 }
 
 footer .f-item .f-col .links li a:hover {
@@ -816,7 +828,7 @@ footer .f-item .f-col ul li a:hover::after {
 
 footer .f-item .f-col ul li img {
     width: 20px;
-    margin-right: 10px;
+    margin-right: 3px;
 }
 
 footer .copy-right {
@@ -831,10 +843,19 @@ footer .copy-right {
 /* ===========> products details ==============>   */
 /* ===========> products details ==============>   */
 
+.product-page  {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #ffff;
+}
 #products {
     width: 100%;
     height: auto;
     margin: 0px auto;
+    background-color: #ffff;
 }
 
 #products .prod_row {
@@ -898,9 +919,10 @@ footer .copy-right {
 #products .prod_row .pro_col p {
     font-family: 'Poppins', sans-serif;
     text-transform: capitalize;
-    letter-spacing: 1px;
-    line-height: 2;
     font-size: 16px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 #products .prod_row .pro_col button {
